# Sparky_universe

./: .gitignore  README.md  ads.txt  index.html  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
brand/: README.md
docs/: module_standard.md  planet_standard.md  satellite_standard.md  solana_constellation_setup.md  station_standard.md
modules/: module.yaml
modules/active_recall_builder/: module.yaml  story.md
modules/ad_policy_guard/: module.yaml  story.md
modules/adcopylint/: __init__.py  module.yaml  story.md
modules/ambiguity_finder/: module.yaml  story.md
modules/angleconvert/: module.yaml  story.md
modules/annual_income_breakdown/: __init__.py  module.yaml  story.md
modules/aurelia/: __init__.py  index.html  module.yaml  story.md
modules/base_convert/: module.yaml  story.md
modules/batch_label_generator/: module.yaml  story.md
modules/breakevencalc/: module.yaml  story.md
modules/bundle_price_calculator/: module.yaml  story.md
modules/campaign_name_generator/: module.yaml  story.md
other/audit/: model.py  (+5 more)
scripts/: module_lint.py  module_sanity.py  new_module.py  run_holiday_digest.py  run_module.sh  run_watchers.py  solana_constellation_refresh.sh  telemetry_cleanup.py
universe/: __init__.py  admin.py  ads.py  app.py  engine.py  errors.py  flows.py  holiday_digest.py  limits.py  lint.py  manifest.py  monitoring.py  redirects.py  registry.py  satellite_bavaria_holiday_orbit.py  satellite_crypto_orbit.py  satellite_finance_orbit.py  satellites.py  seo.py  settings.py  stations.py  telemetry.py
(+1120 files in other folders)
